2006-11-04  Sven Salzwedel <sven_salzwedel@web.de>

	* Code cleanups
	* Replaced own string handling by libc handling where possible
	* Added manpages

2006-10-21  Sven Salzwedel <sven_salzwedel@web.de>

	* Added new options to lowercase ASCII chars in file/dirnames and
	  replace spaces by underscores
	* Fixed bug where paranoia mode was always set to "off"

2006-10-19  Sven Salzwedel <sven_salzwedel@web.de>

	* Code refactoring
	* Fixed bug with new libcdparanoia

2006-10-15  Sven Salzwedel <sven_salzwedel@web.de>

	* Fixed bug where filename was created from title with / char
	* Typo fix

2006-10-14  Sven Salzwedel <sven_salzwedel@web.de>

	* Added tsr_copystr(), removed other copy solutions
	* Moved lineno to LINENO in tsr_util.c
	* Fixed bug where metainfo->ismultiple wasn't set when metainfo was
	  set by command line and artist became "Various" when encoding
	* Added multidisc rc file option
	* Added command line options
	* Bumped version

2006-10-13  Sven Salzwedel <sven_salzwedel@web.de>

	* Added "device" to config file options
	* Refactored track encoding loop 
	* Better error reporting when creating the album directory

2006-10-11  Sven Salzwedel <sven_salzwedel@web.de>

	* Initial Release