@@ -1,3 +1,3 @@
 bin_PROGRAMS=tsrip
-tsrip_SOURCES=tsr_cli.c tsr_cfg.c tsr_cfg.h tsr_mb.c tsr_mb.h tsr_track.c tsr_track.h tsr_util.c tsr_util.h tsr_types.h
+tsrip_SOURCES=tsr_cli.c tsr_cfg.c tsr_cfg.h tsr_mb.c tsr_mb.h tsr_vorbis_track.c tsr_vorbis_track.h tsr_util.c tsr_util.h tsr_types.h
 tsrip_LDADD=@LIBS@
