@@ -29,3 +29,5 @@ tsr_metainfo_t *tsr_metainfo_new(int size);
 tsr_metainfo_t *tsr_metainfo_copy(tsr_metainfo_t *metainfo);
 
 void tsr_metainfo_free(tsr_metainfo_t *metainfo);
+
+void tsr_trackfile_fail(tsr_trackfile_t *trackfile);
